--- a/front-end/src/components/Inicio/Welcome/welcome.css
+++ b/front-end/src/components/Inicio/Welcome/welcome.css
@@ -3,21 +3,14 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 3%;
-    /* border: 1px solid black; */
 }
-
-/* .welcomeLeft{
-    margin-right: 1%;
-} */
 
 .welcomeLeft img{
     width: 450px;
     height: 350px;
-    /* border: 1px solid black; */
 }
 
 .welcomeRight{
-    /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,12 +39,18 @@
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
-    width: auto; /* Ajusta automaticamente a largura */
-    max-width: 100%; /* Largura máxima de 100% do contêiner */
-    display: inline-block; /* Para ajustar a largura ao conteúdo */
+    width: auto;
+    max-width: 100%;
+    display: inline-flex;
+    margin-right: 1%;
 }
 
 .buttonWelcome:hover{
     background-color: #45a049;
+    color: #ffffff;
     font-size: 1rem;
+}
+
+.container-buttons{
+    display: flex;
 }
